set pulse-step to pulse slowly

--- a/src/gtk/store-panel.ui
+++ b/src/gtk/store-panel.ui
@@ -47,6 +47,7 @@
     <child>
       <object class="GtkProgressBar" id="progress_bar">
         <property name="hexpand">true</property>
+        <property name="pulse-step">0.02</property>
         <style>
           <class name="osd"/>
         </style>
