--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -16,3 +16,8 @@ searchbar revealer box {
     box-shadow: none;
     background-color: transparent;
 }
+
+tabbar box {
+    box-shadow: none;
+    background-color: transparent;
+}
