--- a/src/gtk/store-panel.ui
+++ b/src/gtk/store-panel.ui
@@ -56,6 +56,7 @@
     <child>
       <object class="AdwTabBar" id="tab_bar">
         <property name="height-request">44</property>
+        <property name="expand-tabs">false</property>
         <property name="view">tab_view</property>
       </object>
     </child>
