adjust border line style

--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -17,7 +17,7 @@ searchbar revealer box {
     background-color: transparent;
 }
 
-tabbar box {
+tabbar revealer box {
     box-shadow: none;
     background-color: transparent;
 }
