--- a/src/gtk/store-panel.ui
+++ b/src/gtk/store-panel.ui
@@ -5,47 +5,38 @@
     <property name="orientation">vertical</property>
     <property name="hexpand">true</property>
     <child>
-      <object class="GtkBox">
-        <property name="orientation">horizontal</property>
+      <object class="GtkHeaderBar" id="header_bar">
         <property name="hexpand">true</property>
+        <style>
+          <class name="flat"/>
+        </style>
+        <child type="start">
+          <object class="GtkToggleButton" id="search_btn">
+            <property name="icon_name">edit-find-symbolic</property>
+            <property name="active" bind-source="search_bar" bind-property="search_mode_enabled" bind-flags="bidirectional"/>
+            <property name="tooltip-text" translatable="yes">Search</property>
+          </object>
+        </child>
         <child>
-          <object class="GtkHeaderBar" id="header_bar">
-            <property name="hexpand">true</property>
-            <style>
-              <class name="flat"/>
-            </style>
-            <child type="start">
-              <object class="GtkToggleButton" id="search_btn">
-                <property name="icon_name">edit-find-symbolic</property>
-                <property name="active" bind-source="search_bar" bind-property="search_mode_enabled" bind-flags="bidirectional"/>
-                <property name="tooltip-text" translatable="yes">Search</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkLabel" id="index_title">
-                <style>
-                  <class name="title-leading"/>
-                </style>
-              </object>
-            </child>
-            <child type="title">
-              <object class="GtkLabel">
-                <property name="visible">false</property>
-              </object>
-            </child>
-            <child type="end">
-              <object class="GtkMenuButton">
-                <property name="icon_name">open-menu-symbolic</property>
-                <property name="menu_model">primary_menu</property>
-                <property name="tooltip-text" translatable="yes">Main Menu</property>
-              </object>
-            </child>
-            <child type="end">
-              <object class="GtkMenuButton" id="sort_btn">
-                <property name="menu_model">sort_menu</property>
-                <property name="tooltip-text" translatable="yes">Sort By</property>
-              </object>
-            </child>
+          <object class="GtkLabel" id="index_title">
+          </object>
+        </child>
+        <child type="title">
+          <object class="GtkLabel">
+            <property name="visible">false</property>
+          </object>
+        </child>
+        <child type="end">
+          <object class="GtkMenuButton">
+            <property name="icon_name">open-menu-symbolic</property>
+            <property name="menu_model">primary_menu</property>
+            <property name="tooltip-text" translatable="yes">Main Menu</property>
+          </object>
+        </child>
+        <child type="end">
+          <object class="GtkMenuButton" id="sort_btn">
+            <property name="menu_model">sort_menu</property>
+            <property name="tooltip-text" translatable="yes">Sort By</property>
           </object>
         </child>
       </object>
@@ -60,14 +51,6 @@
       </object>
     </child>
     <child>
-      <object class="AdwTabBar" id="tab_bar">
-        <property name="height-request">44</property>
-        <property name="hexpand">true</property>
-        <property name="expand-tabs">false</property>
-        <property name="view">tab_view</property>
-      </object>
-    </child>
-    <child>
       <object class="GtkSearchBar" id="search_bar">
         <child>
           <object class="GtkSearchEntry" id="search_entry">
@@ -77,7 +60,7 @@
       </object>
     </child>
     <child>
-      <object class="AdwTabView" id="tab_view">
+      <object class="AdwViewStack" id="stack_view">
         <property name="width_request">340</property>
       </object>
     </child>
