--- a/src/gtk/store-panel.ui
+++ b/src/gtk/store-panel.ui
@@ -10,17 +10,6 @@
         <style>
           <class name="flat"/>
         </style>
-        <child type="start">
-          <object class="GtkToggleButton" id="search_btn">
-            <property name="icon_name">edit-find-symbolic</property>
-            <property name="active" bind-source="search_bar" bind-property="search_mode_enabled" bind-flags="bidirectional"/>
-            <property name="tooltip-text" translatable="yes">Search</property>
-          </object>
-        </child>
-        <child>
-          <object class="GtkLabel" id="index_title">
-          </object>
-        </child>
         <child type="title">
           <object class="GtkLabel">
             <property name="visible">false</property>
@@ -37,6 +26,13 @@
           <object class="GtkMenuButton" id="sort_btn">
             <property name="menu_model">sort_menu</property>
             <property name="tooltip-text" translatable="yes">Sort By</property>
+          </object>
+        </child>
+        <child type="end">
+          <object class="GtkToggleButton" id="search_btn">
+            <property name="icon_name">edit-find-symbolic</property>
+            <property name="active" bind-source="search_bar" bind-property="search_mode_enabled" bind-flags="bidirectional"/>
+            <property name="tooltip-text" translatable="yes">Search</property>
           </object>
         </child>
       </object>
