--- a/src/gtk/store-panel.ui
+++ b/src/gtk/store-panel.ui
@@ -38,15 +38,6 @@
       </object>
     </child>
     <child>
-      <object class="GtkProgressBar" id="progress_bar">
-        <property name="hexpand">true</property>
-        <property name="pulse-step">0.02</property>
-        <style>
-          <class name="osd"/>
-        </style>
-      </object>
-    </child>
-    <child>
       <object class="GtkSearchBar" id="search_bar">
         <child>
           <object class="GtkSearchEntry" id="search_entry">
@@ -56,8 +47,22 @@
       </object>
     </child>
     <child>
-      <object class="AdwViewStack" id="stack_view">
-        <property name="width_request">340</property>
+      <object class="GtkOverlay">
+        <child type="overlay">
+          <object class="GtkProgressBar" id="progress_bar">
+            <property name="hexpand">true</property>
+            <property name="valign">start</property>
+            <property name="pulse-step">0.02</property>
+            <style>
+              <class name="osd"/>
+            </style>
+          </object>
+        </child>
+        <child>
+          <object class="GtkStack" id="stack_view">
+            <property name="width_request">340</property>
+          </object>
+        </child>
       </object>
     </child>
   </template>
