no duplication when open or drag&drop files

--- a/src/gtk/help-overlay.ui
+++ b/src/gtk/help-overlay.ui
@@ -70,7 +70,7 @@
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes" context="shortcut window">Reload Library</property>
-                <property name="action-name">app.reload-list</property>
+                <property name="action-name">app.reload</property>
               </object>
             </child>
           </object>
