--- a/src/gtk/help-overlay.ui
+++ b/src/gtk/help-overlay.ui
@@ -35,7 +35,7 @@
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes" context="shortcut window">Play/Pause</property>
-                <property name="action-name">app.play</property>
+                <property name="action-name">app.play-pause</property>
               </object>
             </child>
             <child>
@@ -58,7 +58,7 @@
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes" context="shortcut window">Search</property>
-                <property name="action-name">app.search</property>
+                <property name="action-name">app.toggle-search</property>
               </object>
             </child>
             <child>
