--- a/src/gtk/play-panel.ui
+++ b/src/gtk/play-panel.ui
@@ -28,59 +28,65 @@
       </object>
     </child>
     <child>
-      <object class="GtkBox" id="music_box">
-        <property name="orientation">vertical</property>
-        <property name="margin_top">8</property>
-        <property name="width_request">340</property>
+      <object class="GtkWindowHandle">
+        <property name="hexpand">true</property>
+        <property name="vexpand">true</property>
         <child>
-          <object class="GtkImage" id="music_cover">
-            <property name="pixel_size">240</property>
-            <property name="vexpand">true</property>
-          </object>
-        </child>
-        <child>
-          <object class="GtkBox">
+          <object class="GtkBox" id="music_box">
             <property name="orientation">vertical</property>
-            <property name="valign">end</property>
-            <property name="margin_start">16</property>
-            <property name="margin_end">16</property>
-            <property name="margin_top">22</property>
-            <property name="width_request">272</property>
-            <property name="height_request">80</property>
+            <property name="margin_top">8</property>
+            <property name="width_request">340</property>
             <child>
-              <object class="GtkLabel" id="initial_label">
-                <property name="halign">center</property>
-                <property name="hexpand">false</property>
-                <property name="lines">3</property>
-                <property name="single_line_mode">false</property>
+              <object class="GtkImage" id="music_cover">
+                <property name="pixel_size">240</property>
+                <property name="vexpand">true</property>
               </object>
             </child>
             <child>
-              <object class="G4StableLabel" id="music_title">
-                <property name="ellipsize">end</property>
-                <property name="halign">center</property>
-                <style>
-                  <class name="title-large"/>
-                </style>
-              </object>
-            </child>
-            <child>
-              <object class="G4StableLabel" id="music_artist">
-                <property name="ellipsize">end</property>
-                <property name="halign">center</property>
-                <property name="margin_top">2</property>
-                <style>
-                  <class name="dim-label"/>
-                </style>
-              </object>
-            </child>
-            <child>
-              <object class="G4StableLabel" id="music_album">
-                <property name="ellipsize">end</property>
-                <property name="halign">center</property>
-                <style>
-                  <class name="dim-label"/>
-                </style>
+              <object class="GtkBox">
+                <property name="orientation">vertical</property>
+                <property name="valign">end</property>
+                <property name="margin_start">16</property>
+                <property name="margin_end">16</property>
+                <property name="margin_top">22</property>
+                <property name="width_request">272</property>
+                <property name="height_request">80</property>
+                <child>
+                  <object class="GtkLabel" id="initial_label">
+                    <property name="halign">center</property>
+                    <property name="hexpand">false</property>
+                    <property name="lines">3</property>
+                    <property name="single_line_mode">false</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="G4StableLabel" id="music_title">
+                    <property name="ellipsize">end</property>
+                    <property name="halign">center</property>
+                    <style>
+                      <class name="title-large"/>
+                    </style>
+                  </object>
+                </child>
+                <child>
+                  <object class="G4StableLabel" id="music_artist">
+                    <property name="ellipsize">end</property>
+                    <property name="halign">center</property>
+                    <property name="margin_top">2</property>
+                    <style>
+                      <class name="dim-label"/>
+                    </style>
+                  </object>
+                </child>
+                <child>
+                  <object class="G4StableLabel" id="music_album">
+                    <property name="ellipsize">end</property>
+                    <property name="halign">center</property>
+                    <style>
+                      <class name="dim-label"/>
+                    </style>
+                  </object>
+                </child>
               </object>
             </child>
           </object>
