shrink the window size as much as possible

--- a/src/gtk/play-panel.ui
+++ b/src/gtk/play-panel.ui
@@ -18,6 +18,9 @@
         </child>
         <child type="start">
           <object class="GtkLabel" id="index_label">
+          <style>
+            <class name="dim-label"/>
+          </style>
           </object>
         </child>
         <child type="title">
@@ -39,9 +42,6 @@
         <child>
           <object class="GtkBox" id="music_box">
             <property name="orientation">vertical</property>
-            <property name="margin_top">8</property>
-            <property name="margin_bottom">32</property>
-            <property name="width_request">340</property>
             <child>
               <object class="GtkImage" id="music_cover">
                 <property name="pixel_size">240</property>
@@ -51,12 +51,9 @@
             <child>
               <object class="GtkBox">
                 <property name="orientation">vertical</property>
-                <property name="valign">end</property>
                 <property name="margin_start">16</property>
                 <property name="margin_end">16</property>
-                <property name="margin_top">16</property>
-                <property name="margin_bottom">16</property>
-                <property name="width_request">272</property>
+                <property name="margin_top">8</property>
                 <child>
                   <object class="GtkLabel" id="initial_label">
                     <property name="halign">center</property>
