fix css style of gridview

--- a/src/gtk/style.css
+++ b/src/gtk/style.css
@@ -13,8 +13,8 @@
 }
 
 gridview child {
-    margin: 0px;
-    padding: 3px 2px;
+    margin: 2px;
+    padding: 0px;
 }
 
 searchbar revealer box {
