refactor actions for multiply items

--- a/src/gtk/help-overlay.ui
+++ b/src/gtk/help-overlay.ui
@@ -58,7 +58,7 @@
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes" context="shortcut window">Search</property>
-                <property name="action-name">app.toggle-search</property>
+                <property name="action-name">win.toggle-search</property>
               </object>
             </child>
             <child>
