--- a/src/gtk/store-panel.ui
+++ b/src/gtk/store-panel.ui
@@ -54,6 +54,24 @@
   </template>
 
   <menu id="primary_menu">
+    <submenu>
+      <attribute name="label" translatable="yes">_Color Scheme</attribute>
+      <item>
+        <attribute name="label" translatable="yes">_System</attribute>
+        <attribute name="action">app.scheme</attribute>
+        <attribute name="target">0</attribute>
+      </item>
+      <item>
+        <attribute name="label" translatable="yes">_Light</attribute>
+        <attribute name="action">app.scheme</attribute>
+        <attribute name="target">1</attribute>
+      </item>
+      <item>
+        <attribute name="label" translatable="yes">_Dark</attribute>
+        <attribute name="action">app.scheme</attribute>
+        <attribute name="target">4</attribute>
+      </item>
+    </submenu>
     <section>
       <item>
         <attribute name="label" translatable="yes">_Reload Library</attribute>
