--- a/src/gtk/preferences.ui
+++ b/src/gtk/preferences.ui
@@ -15,7 +15,7 @@
               </object>
             </child>
             <child>
-              <object class="AdwActionRow" id="compact_list">
+              <object class="AdwActionRow">
                 <property name="icon-name">view-list-symbolic</property>
                 <property name="title" translatable="yes">Compact playlist view</property>
                 <property name="activatable_widget">compact_btn</property>
@@ -27,7 +27,7 @@
               </object>
             </child>
             <child>
-              <object class="AdwActionRow" id="grid_mode">
+              <object class="AdwActionRow">
                 <property name="icon-name">view-grid-symbolic</property>
                 <property name="title" translatable="yes">Grid view for artists/albums</property>
                 <property name="activatable_widget">grid_btn</property>
@@ -115,7 +115,7 @@
                 <property name="title" translatable="yes">Show audio peak level</property>
               	<property name="show-enable-switch">true</property>
                 <child>
-                  <object class="AdwActionRow" id="peak_act_row">
+                  <object class="AdwActionRow">
                     <property name="title" translatable="yes">Display characters</property>
                     <child>
                       <object class="GtkEntry" id="peak_entry">
@@ -129,7 +129,7 @@
               </object>
             </child>
             <child>
-              <object class="AdwActionRow" id="rotate_cover">
+              <object class="AdwActionRow">
                 <property name="icon-name">object-rotate-right-symbolic</property>
                 <property name="title" translatable="yes">Rotate album cover</property>
                 <property name="activatable_widget">rotate_btn</property>
