add shortcut for 'show tags' and 'save list'

--- a/src/gtk/help-overlay.ui
+++ b/src/gtk/help-overlay.ui
@@ -27,6 +27,12 @@
                 <property name="action-name">app.quit</property>
               </object>
             </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="title" translatable="yes" context="shortcut window">Show Tags</property>
+                <property name="action-name">app.show-cur-tags</property>
+              </object>
+            </child>
           </object>
         </child>
         <child>
@@ -71,6 +77,12 @@
               <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes" context="shortcut window">Reload Library</property>
                 <property name="action-name">app.reload</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="title" translatable="yes" context="shortcut window">Save List</property>
+                <property name="action-name">win.save-list</property>
               </object>
             </child>
           </object>
